@@ -37,6 +37,8 @@ Changes for Perl Application Development and Refactoring Environment
     - Make Capture::Tiny a test prereq in order to eliminate a strange 
       test failure (SZABGAB).  
     - Added an initial simplistic mime-type + detector for Template Toolkit (ADAMK)
+    - Change Directory label to Project to hint to the user that Padre does
+      actually understand the concept of a project, it's just subtle (ADAMK)
 
 0.50 2009.11.08
     - Fixed #686 DocBrowser launching Padre help (BRAMBLE)
